# ALG

./: .gitignore
code/: .gitignore  CMakeLists.txt  find_bucket_index_for_value_by_binary_search.cpp  find_bucket_index_for_value_by_binary_search.h  main.c  quicksort.c  quicksort.h  sample_data_01.txt  sample_data_02.txt  samplesort.c  samplesort.h  select_splitters.c  select_splitters.h
code/src/: array.c  array.h  comparator.h  compare_int_pointers.c  compare_int_pointers.h  int_tools.c  int_tools.h  main.c  sort.h  swap.h
code/src/quicksort/: divide_data_from_pivot.c  divide_data_from_pivot.h  partition.c  partition.h  quicksort.c  quicksort.h
code/src/samplesort/: configuration.h  place_elements_in_appropriate_bucket.c  place_elements_in_appropriate_bucket.h  place_elements_in_corresponding_bucket.c  place_elements_in_corresponding_bucket.h  samplesort.c  samplesort.h  select_splitters.c  select_splitters.h
code/src/samplesort/choose_sample/: block.c  block.h  choose_sample.h  even.c  even.h  random.c  random.h  semi_random.c  semi_random.h
paper/: abstract.tex  bibliography.bib  changelog.tex  conclusion.tex  history.tex  implementation.tex  introduction.tex  main.ltx  main.tex  multithreading.tex  oath-of-assurance.tex  space-time-complexity.tex  title.tex  varriants.tex
presentation/: main.pptx
